dev-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-downloader-deploy
  labels:
    app: movie-downloader
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: movie-downloader
  template:
    metadata:
      labels:
        app: movie-downloader
    spec:
      containers:
      - name: movie-downloader
        image: dani09/movie-downloader-dev
        imagePullPolicy: Always
        args: ["serve"]
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config.json
          subPath: config.json
        ports:
        - containerPort: 8080
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: movie-downloader-pvc
          readOnly: true
      - name: config
        configMap:
          name: movie-downloader-config

---

kind: Service
apiVersion: v1
metadata:
  name: movie-downloader-svc
spec:
  sessionAffinity: ClientIP
  selector:
    app: movie-downloader
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: LoadBalancer
